test/fail/action-assignment.app
//with signature x()
application test

define page root() {

	var z := x()

	action x() {
	
	}
}
